@@ -1,5 +1,6 @@
 2010-06-xx robux4
-New 1.0.1 version:
+New 1.1.0 version:
+    - EbmlElement::VoidMe() now returns a uint64
     - move some operator code in the .cpp files (MSVC has issues in DLLs)
 
 2010-06-04 robux4/mosu
